Set up New Publisher Form and fixed login issues

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -35,3 +35,13 @@ code {
   color: red;
   font-style: italic;
 }
+
+.confirmation {
+  color: green;
+  font-style: italic;
+}
+
+.img {
+  margin: auto;
+  display: block;
+}
